# sketch_oxide

./: .gitignore  .pre-commit-config.yaml  ALGORITHMS_COMPLETE.md  ALGORITHM_SELECTION_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  C_SHARP_IMPLEMENTATION_SUMMARY.md  Cargo.toml  GITHUB_PROFILE.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_PATTERNS.md  JAVA_CSHARP_FFI_PLAN.md  LICENSE-APACHE  LICENSE-MIT  PERFORMANCE_GUIDE.md  QUICK_START.md  README.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  SECURITY.md  VERSIONING.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml  v0.1.5_to_v0.1.6_MIGRATION.md  validation_results.json
.github/: CODEOWNERS  FUNDING.yml  GITHUB_SECRETS.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  (+1 more)
docs/: CI_CD_ANALYSIS.md  CROSS_LANGUAGE_TEST_DATA.md  CROSS_LANGUAGE_VALIDATION.md  TEST_COVERAGE_SUMMARY.md  index.md  test_coverage_harmonization_plan.md
dotnet/: BUILDING.md  PUBLISHING.md  README.md  SketchOxide.sln
dotnet/csharp-ffi/: Cargo.toml  build.rs
dotnet/csharp-ffi/src/: lib.rs
java/: Cargo.toml  README.md  pom.xml
nodejs/: Cargo.toml  README.md  fix-types.js  index.d.ts  index.js  jest.config.js  package-lock.json  package.json  tsconfig.json
nodejs/__tests__/: bloom_filter.test.ts  ddsketch.test.ts  hyperloglog.test.ts  minhash.test.ts  tier1_new_sketches.test.ts  tier2_sketches.test.ts
nodejs/benchmarks/: hyperloglog.bench.ts  tier1_new_sketches.bench.ts  tier2_sketches.bench.ts
nodejs/examples/: 01_basic_usage.js  02_ddos_detection.ts  03_cardinality_estimation.js  04_frequency_analysis.ts  05_set_reconciliation.js  06_range_filtering.ts  07_network_monitoring.js  08_performance_comparison.ts  README.md
nodejs/nodejs/: .gitignore
nodejs/src/: lib.rs
python/: ADVANCED_SKETCHES_README.md  Cargo.toml  README.md  benchmarks_phase3.py  demo_advanced_sketches.py  pyproject.toml  test_all_9_algorithms.py  test_bindings.py  test_elastic_sketch.py  test_qsketch.py  test_removable_sketch.py  test_salsa.py
python/benchmarks/: bench_new_sketches.py  bench_tier2_sketches.py
python/examples/: all_algorithms.py
python/sketch_oxide/: __init__.py  __init__.pyi
python/src/: binary_fuse.rs  blocked_bloom.rs  bloom.rs  common.rs  conservative_count_min.rs  count_min.rs  count_sketch.rs  counting_bloom.rs  cpc.rs  cuckoo.rs  ddsketch.rs  elastic_sketch.rs  exponential_histogram.rs  frequent.rs  grafite.rs  grf.rs  heavy_keeper.rs  hyperloglog.rs  kll.rs  learned_bloom.rs  lib.rs  memento_filter.rs  minhash.rs  nitrosketch.rs  qsketch.rs  rateless_iblt.rs  removable_sketch.rs  req.rs  reservoir.rs  ribbon.rs  salsa.rs  simhash.rs  sliding_hll.rs  sliding_window.rs  space_saving.rs  spline_sketch.rs  stable_bloom.rs  tdigest.rs  theta.rs  ultraloglog.rs  (+3 more)
python/tests/: __init__.py  test_basic.py  test_bloom_filter.py  test_ddsketch.py  test_exponential_histogram.py  test_minhash.py  test_new_sketches.py  test_py_bindings.py  test_spline_sketch.py  test_tier2_sketches.py
scripts/: sync-version.sh
sketch_oxide/: Cargo.toml  benchmark_results.txt
sketch_oxide/benches/: benchmarks.rs  bloom_benchmarks.rs  comparison_benchmarks.rs  conservative_cm_benchmarks.rs  count_min_benchmarks.rs  cpc_benchmarks.rs  ddsketch_benchmarks.rs  filter_comparison_benchmarks.rs  frequent_items_benchmarks.rs  grafite_benchmarks.rs  grf_bench.rs  hash_benchmarks.rs  heavy_keeper_bench.rs  hyperloglog_benchmarks.rs  learned_bloom_bench.rs  membership_benchmarks.rs  memento_filter_benchmarks.rs  minhash_benchmarks.rs  nitrosketch_bench.rs  quantiles_benchmarks.rs  rateless_iblt_bench.rs  req_benchmarks.rs  sampling_benchmarks.rs  simhash_benchmarks.rs  sliding_hll_benchmarks.rs  streaming_benchmarks.rs  theta_benchmarks.rs  ultraloglog_benchmarks.rs  univmon_bench.rs  vacuum_filter_bench.rs
sketch_oxide/examples/: README.md  all_algorithms.rs  debug_fn.rs  minhash_demo.rs  req_demo.rs  test_binary_fuse.rs  test_fn.rs  univmon_network_telemetry.rs
sketch_oxide/src/: lib.rs
sketch_oxide/src/cardinality/: cpc.rs  hyperloglog.rs  mod.rs  qsketch.rs  theta.rs  ultraloglog.rs
sketch_oxide/src/common/: error.rs  hash.rs  mod.rs  traits.rs  types.rs  validation.rs
sketch_oxide/src/frequency/: conservative_count_min.rs  count_min.rs  count_sketch.rs  elastic_sketch.rs  frequent.rs  heavy_keeper.rs  mod.rs  nitrosketch.rs  removable_sketch.rs  salsa.rs  space_saving.rs
sketch_oxide/src/membership/: binary_fuse.rs  blocked_bloom.rs  bloom.rs  counting_bloom.rs  cuckoo.rs  learned_bloom.rs  mod.rs  ribbon.rs  stable_bloom.rs  vacuum_filter.rs
sketch_oxide/src/quantiles/: ddsketch.rs  kll.rs  mod.rs  req.rs  spline_sketch.rs  tdigest.rs
sketch_oxide/src/range/: grafite.rs  mod.rs
sketch_oxide/src/range_filters/: grafite.rs  grf.rs  memento_filter.rs  mod.rs
sketch_oxide/src/reconciliation/: mod.rs  rateless_iblt.rs
sketch_oxide/src/sampling/: mod.rs  reservoir.rs  varopt.rs
sketch_oxide/src/similarity/: minhash.rs  mod.rs  simhash.rs
sketch_oxide/src/streaming/: exponential_histogram.rs  mod.rs  sliding_hll.rs  sliding_window.rs
sketch_oxide/src/universal/: mod.rs  univmon.rs
sketch_oxide/tests/: binary_fuse_test.proptest-regressions  binary_fuse_test.rs  blocked_bloom_test.rs  bloom_test.rs  common_traits_test.rs  count_min_test.proptest-regressions  count_min_test.rs  cpc_test.rs  ddsketch_test.rs  frequent_items_test.rs  grafite_performance_tests.rs  grafite_tests.rs  grf_tests.rs  hash_functions_test.rs  heavy_keeper_tests.rs  hyperloglog_test.rs  integration_tests.rs  learned_bloom_tests.proptest-regressions  learned_bloom_tests.rs  memento_filter_tests.rs  minhash_test.rs  nitrosketch_tests.proptest-regressions  nitrosketch_tests.rs  rateless_iblt_tests.rs  req_test.rs  reservoir_test.rs  ribbon_test.rs  simhash_test.rs  sliding_hll_tests.rs  trait_refactoring_test.rs  ultraloglog_test.proptest-regressions  ultraloglog_test.rs  univmon_tests.rs  vacuum_filter_performance.rs  vacuum_filter_tests.rs  varopt_test.rs
tests/: cross_language_validation.py
(+187 files in other folders)
