[workspace]
members = ["sketch_oxide", "python", "nodejs", "java", "dotnet/csharp-ffi"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Yury Fedoseev <yfedoseev@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yfedoseev/sketch_oxide"
keywords = ["data-structures", "probabilistic", "sketches", "cardinality", "quantiles"]
categories = ["algorithms", "data-structures", "mathematics"]

[workspace.dependencies]
# Common dependencies will go here as we add them
