[workspace]
members = ["sketch_oxide", "python", "nodejs", "java", "dotnet/csharp-ffi"]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
# Deny dangerous patterns in production
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "warn"
print_stderr = "warn"

# Pedantic lints (cherry-picked for value)
cloned_instead_of_copied = "warn"
doc_markdown = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
fn_params_excessive_bools = "warn"
inefficient_to_string = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
unnecessary_wraps = "warn"
unused_async = "warn"

# Cargo group
cargo_common_metadata = "warn"

[workspace.package]
version = "0.1.6"
authors = ["Yury Fedoseev <yfedoseev@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yfedoseev/sketch_oxide"
keywords = ["data-structures", "probabilistic", "sketches", "cardinality", "quantiles"]
categories = ["algorithms", "data-structures", "mathematics"]

[workspace.dependencies]
# FFI bindings
jni = "0.21"
napi = { version = "2.15", features = ["napi8"] }
napi-derive = "2.15"
napi-build = "2.1"
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
pyo3-build-config = "0.22"

# Core dependencies
twox-hash = "2.0"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
hex = "0.4"
rand = "0.9"
numpy = "0.22"

# Development and benchmarking
criterion = "0.5"
proptest = "1.4"
pdatastructs = "0.7"
probabilistic-collections = "0.7"
streaming_algorithms = "0.3"
