[package]
name = "sketch-oxide-node"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
napi.workspace = true
napi-derive.workspace = true
sketch_oxide = { path = "../sketch_oxide" }
hex.workspace = true
twox-hash.workspace = true

[dev-dependencies]
napi-build.workspace = true

[build-dependencies]
napi-build.workspace = true

[lib]
crate-type = ["cdylib"]
