[package]
name = "sketch_oxide_py"
version = "0.1.2"
edition = "2021"

[lib]
name = "sketch_oxide"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
sketch_oxide = { path = "../sketch_oxide" }
numpy = "0.22"  # For NumPy integration
twox-hash = "2.0"  # For hashing in SlidingHyperLogLog

[build-dependencies]
pyo3-build-config = "0.22"

[lints.clippy]
# PyO3 type signatures trigger false positives for useless_conversion
useless_conversion = "allow"
