[package]
name = "sketch_oxide_py"
version.workspace = true
edition.workspace = true

[lib]
name = "sketch_oxide"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
sketch_oxide = { path = "../sketch_oxide" }
numpy.workspace = true  # For NumPy integration
twox-hash.workspace = true  # For hashing in SlidingHyperLogLog

[build-dependencies]
pyo3-build-config.workspace = true

[lints.clippy]
# PyO3 type signatures trigger false positives for useless_conversion
useless_conversion = "allow"
