[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "sketch-oxide"
version = "0.1.2"
description = "State-of-the-art DataSketches library (2025) - UltraLogLog, Binary Fuse Filters, DDSketch"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
authors = [{name = "Yury Fedoseev", email = "yfedoseev@gmail.com"}]
keywords = ["data-structures", "probabilistic", "sketches", "cardinality", "quantiles"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/yfedoseev/sketch_oxide"
Repository = "https://github.com/yfedoseev/sketch_oxide"
Documentation = "https://docs.rs/sketch_oxide"

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "ruff>=0.1", "mypy>=1.0"]
numpy = ["numpy>=1.20"]

[tool.maturin]
python-source = "."

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
