[package]
name = "sketch_oxide"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "State-of-the-art DataSketches library (2025) - UltraLogLog, Binary Fuse Filters, DDSketch, and more"

[dependencies]
# Hash functions for sketches
twox-hash = "2.0"  # XXHash implementation
xxhash-rust = { version = "0.8", features = ["xxh64"] }  # xxHash for Bloom filter
# Random number generation for sampling algorithms
rand = "0.9"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
rand = "0.9.2"

# Comparison crates for "us vs them" benchmarks
pdatastructs = "0.7"             # HyperLogLog, Count-Min, Bloom comparison (stable Rust)
probabilistic-collections = "0.7" # Bloom, Cuckoo comparison
streaming_algorithms = "0.3"     # SIMD-accelerated streaming algorithms

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "hash_benchmarks"
harness = false

[[bench]]
name = "ultraloglog_benchmarks"
harness = false

[[bench]]
name = "ddsketch_benchmarks"
harness = false

[[bench]]
name = "req_benchmarks"
harness = false

[[bench]]
name = "count_min_benchmarks"
harness = false

[[bench]]
name = "cpc_benchmarks"
harness = false

[[bench]]
name = "frequent_items_benchmarks"
harness = false

[[bench]]
name = "bloom_benchmarks"
harness = false

[[bench]]
name = "filter_comparison_benchmarks"
harness = false

[[bench]]
name = "simhash_benchmarks"
harness = false

[[bench]]
name = "sampling_benchmarks"
harness = false

[[bench]]
name = "hyperloglog_benchmarks"
harness = false

[[bench]]
name = "quantiles_benchmarks"
harness = false

[[bench]]
name = "membership_benchmarks"
harness = false

[[bench]]
name = "streaming_benchmarks"
harness = false

[[bench]]
name = "conservative_cm_benchmarks"
harness = false

[[bench]]
name = "comparison_benchmarks"
harness = false
